bugs fixed in pricing

--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -132,7 +132,7 @@
           <img src="assets/images/exclamationCircle-Red.svg">
         </div>
         <div *ngIf="selectedSourceType.sourceType === 'content'&&statusObject.status!=='failed'">
-          <div class="success-check  pb-4" *ngIf="(statusObject?.validation?.url?.validated)||(selectedSourceType.resourceType === 'file')">
+          <div class="success-check pb-4" *ngIf="(statusObject?.validation?.url?.validated)||(selectedSourceType.resourceType === 'file')">
             <img src="assets/icons/successCheck.svg">
           </div>
           <div class="error-check pb-4" *ngIf="!(statusObject?.validation?.url?.validated)&&!(selectedSourceType.resourceType === 'file')">
@@ -152,7 +152,8 @@
         <ng-container *ngIf="selectedSourceType.sourceType !== 'faq'&&statusObject.status!=='success'">
           <div class="status-identification-content">
             <div class="content-title">
-              <img src="assets/images/source-icos/check-green.svg" class="successfullyConnected">
+              <img src="assets/images/source-icos/check-green.svg" *ngIf="(statusObject?.validation?.url?.validated||selectedSourceType.resourceType=='file')" class="successfullyConnected">
+              <img src="assets/images/source-icos/Info-red.svg" *ngIf="!(statusObject?.validation?.url?.validated)&&selectedSourceType.resourceType!=='file'" class="successfullyConnected">
               <span *ngIf="selectedSourceType.resourceType!='file'" >Initial URL validation</span>
               <span *ngIf="selectedSourceType.resourceType=='file'" >File Validation</span>
             </div>
