--- a/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
+++ b/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
@@ -208,7 +208,7 @@
   <perfect-scrollbar>
     <div class="modal-body">
       <div class="desc-text-info">
-        {{"plan.choose_another_plan"| translate}} <span>{{"plan.delete_excess"| translate}}</span> {{"plan.automatically_deactivated"| translate}}. 
+        {{"plan.choose_another_plan"| translate}} <span>{{"plan.delete_excess"| translate}}</span>. 
       </div>
         <div class="excess-table-data">
           <div class="excess-header">{{"plan.features"| translate}}</div>
