In Full page result screen, Unable to see border for First record issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -2413,6 +2413,7 @@ display: none !important;
 
 .sdk-top-down-interface .topdown-search-main-container .structured-data-outer-wrap{
   margin-bottom:30px !important;
+  margin-top: 5px;
 }
 
 
