“View Configuration” beside run button only in collapse state

--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -152,8 +152,8 @@
                         (click)="runExperiment(exp._id, 'active', $event)">
                         {{"experiments.run"| translate}}
                       </button>
-                      <span (click)="addExperiment('edit', exp)" style="padding-left: 2px; font-size: 9px"
-                        *ngIf="!status_active">{{"experiments.view_configuration"| translate}}</span>
+                      <!-- <span (click)="addExperiment('edit', exp)" style="padding-left: 2px; font-size: 9px"
+                        *ngIf="!status_active">{{"experiments.view_configuration"| translate}}</span> -->
                     </div>
                   </div>
 
