--- a/findly-builder/src/app/components/add-structured-data/add-structured-data.component.html
+++ b/findly-builder/src/app/components/add-structured-data/add-structured-data.component.html
@@ -81,31 +81,55 @@
                                         <button class="dropdown-toggle dropdown-input p-0" id="btn_toggle_sample_json_add_structured_data" ngbDropdownToggle placement="top-right" container='body' ngbTooltip="Sample JSON" tooltipClass="ngb_tooltip_custom_class sampleJson">                 
                                             <img class="action_icon" src="assets/icons/content/sample-json.svg" >
                                         </button>                                     
-                                        <ul class="dropdown-menu content-menu samplejsoncontent" ngbDropdownMenu>                                         
-                                        <div class="row m-0">
-                                            <div class="lft_sec">1</div>
-                                            <div class="rgt_sec">{{openingBrace}}</div>
-                                        </div>
-                                        <div class="row m-0">
-                                            <div class="lft_sec">2</div>
-                                            <div class="rgt_sec">“firstname” : “John”,</div>
-                                        </div>
-                                        <div class="row m-0">
-                                            <div class="lft_sec">3</div>
-                                            <div class="rgt_sec">“lastname” : ”Doe”,</div>
-                                        </div>
-                                        <div class="row m-0">
-                                            <div class="lft_sec">4</div>
-                                            <div class="rgt_sec">“zipcode” : null,</div>
-                                        </div>
-                                        <div class="row m-0">
-                                            <div class="lft_sec">5</div>
-                                            <div class="rgt_sec">“Age” : “61”</div>
-                                        </div>   
-                                        <div class="row m-0">
-                                            <div class="lft_sec">6</div>
-                                            <div class="rgt_sec">{{closingBrace}}</div>
-                                        </div>                                         
+                                        <ul class="dropdown-menu content-menu samplejsoncontent" ngbDropdownMenu>
+                                            <div class="row m-0">
+                                                <div class="lft_sec">
+                                                    <div class="row m-0">
+                                                        <div class="lft_sec_num">1</div>
+                                                    </div>
+                                                    <div class="row m-0">
+                                                        <div class="lft_sec_num">2</div>
+                                                    </div>
+                                                    <div class="row m-0">
+                                                        <div class="lft_sec_num">3</div>
+                                                    </div>
+                                                    <div class="row m-0">
+                                                        <div class="lft_sec_num">4</div>
+                                                    </div>
+                                                    <div class="row m-0">
+                                                        <div class="lft_sec_num">5</div>
+                                                    </div>
+                                                    <div class="row m-0">
+                                                        <div class="lft_sec_num">6</div>
+                                                    </div>
+                                                </div>
+                                                <div class="rgt_sec">
+                                                    <div class="row m-0">
+                                                        <!-- <div class="lft_sec">1</div> -->
+                                                        <div class="rgt_sec">{{openingBrace}}</div>
+                                                    </div>
+                                                    <div class="row m-0">
+                                                        <!-- <div class="lft_sec">2</div> -->
+                                                        <div class="rgt_sec">“firstname” : “John”,</div>
+                                                    </div>
+                                                    <div class="row m-0">
+                                                        <!-- <div class="lft_sec">3</div> -->
+                                                        <div class="rgt_sec">“lastname” : ”Doe”,</div>
+                                                    </div>
+                                                    <div class="row m-0">
+                                                        <!-- <div class="lft_sec">4</div> -->
+                                                        <div class="rgt_sec">“zipcode” : null,</div>
+                                                    </div>
+                                                    <div class="row m-0">
+                                                        <!-- <div class="lft_sec">5</div> -->
+                                                        <div class="rgt_sec">“Age” : “61”</div>
+                                                    </div>   
+                                                    <div class="row m-0">
+                                                        <!-- <div class="lft_sec">6</div> -->
+                                                        <div class="rgt_sec">{{closingBrace}}</div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </ul>
                                     </div>
                                 </div>
