--- a/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
+++ b/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
@@ -153,6 +153,17 @@
                                     margin-right: 20px;
                                     padding: 5px 0;
                                 }
+                                .lft_sec_num{
+                                    background: #E7F1FF;
+                                    width: 37px;
+                                    text-align: center;
+                                    color: #393939;
+                                    font-weight: normal;
+                                    font-size: 14px;
+                                    line-height: 17px;
+                                    // margin-right: 20px;
+                                    padding: 7px 0;
+                                }
                                 .rgt_sec{
                                     color: #393939;
                                     padding: 5px 0;
