--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -161,10 +161,10 @@
           </div>
         </ng-container>
         <div class="progressNote" *ngIf="selectedSourceType.sourceType === 'faq'&&!((statusObject.status==='success') || (statusObject.status==='failed'))">
-          <div>Faq Extraction In Progress</div>
+          <div>{{importFaqInprogress?'Import':'Faq Extraction'}} In Progress</div>
           <div class="text-center">
             <mat-progress-bar mode="indeterminate" class="mat_progress_bar"></mat-progress-bar>
-            <div class="relaxNote">You will be notified when the extraction progress is done</div>
+            <div class="relaxNote">You will be notified when the {{importFaqInprogress?'import':'extraction'}} progress is done</div>
           </div>
         </div>
         <div class="configInProgress" *ngIf="statusObject?.validation?.url?.validated&&selectedSourceType.sourceType === 'web'">
