bugs fixed in pricing

--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -950,7 +950,7 @@
           </div>
           <div class="text-center">
             <mat-progress-bar mode="indeterminate" class="mat_progress_bar"></mat-progress-bar>
-            <div class="relaxNote">You will be notified when the extraction process is done.</div>
+            <div class="relaxNote">You will be notified when the Crawling process is done.</div>
           </div>
         </ng-container>
         <div class="success-check  pb-4" *ngIf="(statusObject.status==='success')">
