--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1275,6 +1275,7 @@ input:focus{
   color: #9AA0A6 !important;
   margin-top: 0px !important;
   margin-bottom: 12px !important;
+  font-weight: initial !important;
 }
 
 .sdk-top-down-interface .faqs-search-data-container{
@@ -1644,11 +1645,13 @@ float: right;
 }
 
 .sdk-top-down-interface .quick-actions{
-  font-size: 12px;
-  font-weight: bold;
   color: #9AA0A6;
   text-transform: uppercase;
   margin: 15px 0;
+    font-weight: 600;
+    font-size: 12px;
+    margin-bottom: 12px;
+    display: block;
 }
 
 
